# chart-to-ssc

./: LICENSE.txt  README.md  pyproject.toml
src/chart_to_ssc/: __about__.py  __main__.py
tests/: __init__.py
